# envctl

./: .clang-format  .dprint.jsonc  .gitattributes  .gitignore  .shellcheckrc  Cargo.toml  Makefile  README.md  envctl  envctl.c  envctl.sh
.github/workflows/: ci.yml  release.yml
src/: agent.c  agent.h  fileio.c  fileio.h  help.c  help.h  lines.c  lines.h  main.c  main.rs  redact.c  redact.h  util.c  util.h
