[package]
name = "envctl"
version = "0.1.0"
edition = "2024"
description = "manage keys in env files"
readme = "README.md"
repository = "https://github.com/kjanat/envctl"
license = "MIT"
publish = false

[dependencies]

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"
codegen-units = 1
